--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: problogger
+name: P11co's blog
 # Short bio or description (displayed in the header)
-description: Sharing information to my knowledge, responsibly
+description: Sharing is caring
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/39766228?s=40&v=4
@@ -17,15 +17,15 @@ avatar: https://avatars.githubusercontent.com/u/39766228?s=40&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: p11co@proton.me
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: p11co
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -46,7 +46,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "https://p11co.github.io/blog/"
 
 #
 # !! You don't need to change any of the configuration flags below !!
