--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: P11co's blog
+name: P11cos blog
 # Short bio or description (displayed in the header)
 description: Sharing is caring
 
