--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: P11cos blog
+name: "Piico's World"
 # Short bio or description (displayed in the header)
-description: Sharing is caring
-
+description: Ubique
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/39766228?s=40&v=4
 
