--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Name of your site (displayed in the header)
 name: "Piico's World"
 # Short bio or description (displayed in the header)
-description: Ubique
+description: Dare to share and make knowledge transparent
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/39766228?s=40&v=4
 
